--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
     <title>网易云音乐</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
@@ -100,7 +102,48 @@
         <div class="recommend-list">
             <h2 class="tabs-title">推荐歌单</h2>
             <ul class="songs-collection">
+                <li>
+                    <span class="listen-acount"></span>
+                    <img src="http://via.placeholder.com/50x50" data-src="" alt="推荐歌单">
+                    <p class="txt-ellipsis">
 
+                    </p>
+                </li>
+                <li>
+                    <span class="listen-acount"></span>
+                    <img src="http://via.placeholder.com/50x50" data-src="" alt="推荐歌单">
+                    <p class="txt-ellipsis">
+
+                    </p>
+                </li>
+                <li>
+                    <span class="listen-acount"></span>
+                    <img src="http://via.placeholder.com/50x50" data-src="" alt="推荐歌单">
+                    <p class="txt-ellipsis">
+
+                    </p>
+                </li>
+                <li>
+                    <span class="listen-acount"></span>
+                    <img src="http://via.placeholder.com/50x50" data-src="" alt="推荐歌单">
+                    <p class="txt-ellipsis">
+
+                    </p>
+                </li>
+                <li>
+                    <span class="listen-acount"></span>
+                    <img src="http://via.placeholder.com/50x50" data-src="" alt="推荐歌单">
+                    <p class="txt-ellipsis">
+
+                    </p>
+                </li>
+                <li>
+                    <span class="listen-acount"></span>
+                    <img src="http://via.placeholder.com/50x50" data-src="" alt="推荐歌单">
+                    <p class="txt-ellipsis">
+
+                    </p>
+                </li>
             </ul>
         </div>
         <div class="newest-list">
@@ -244,7 +287,7 @@
     </section>
 </section>
 
-<script src="//at.alicdn.com/t/font_402066_lawssjbuz5q257b9.js"></script>
+<script src="//at.alicdn.com/t/font_402066_akmkej0132dwjyvi.js"></script>
 <script src="vendors/jquery.min.js"></script>
 <script src="vendors/av-min.js"></script>
 <script src="js/av.js"></script>
@@ -393,11 +436,17 @@
         collectionQuery.find().then(function (results) {
             console.log('结果出来了！！');
             if (results && results.length) {
-                let mHtml =songCollection_template(results);
-                $('.tabs-content>.tabs-recommend>.recommend-list>ul.songs-collection').append(mHtml);
-                //将原图加载到页面
+//                let mHtml =songCollection_template(results);
+//                $('.tabs-content>.tabs-recommend>.recommend-list>ul.songs-collection').append(mHtml);
+                //先把缩略图加载到页面，当原图加载完后再将缩略图替换掉
                 for(let i=0;i<$('.tabs-recommend>.recommend-list>ul.songs-collection>li').length;i++){
-                    let $currentImage=$('.tabs-recommend>.recommend-list>ul.songs-collection>li').eq(i).find('img[data-src]');
+                    let $currentLi=$('.tabs-recommend>.recommend-list>ul.songs-collection>li').eq(i);
+                    let $currentImage=$currentLi.find('img[data-src]');
+                    $currentLi.children('.listen-acount').text(results[i].attributes["listenAmount"]);
+                    $currentLi.children('p.txt-ellipsis').text(results[i].attributes["title"]);
+                    $currentImage.attr('src',results[i].attributes["thumbnails"]);
+                    $currentImage.attr('data-src',results[i].attributes["image"]);
+
                     let temp_img=new Image();
                     temp_img.src=$currentImage.attr('data-src');
                     temp_img.onload=function () {
@@ -474,31 +523,31 @@
     }
 
     //推荐歌单模板，包含标题、图片、在听人数,传入对象数组，返回组装好的HTML字符串
-    function songCollection_template(results){
-        if(results instanceof Array){   //传入的是数组
-            if (results.length) {
-                let mHtml = '';
-                for (let i = 0; i < results.length; i++) {
-                    let currentSong = results[i].attributes;
-                    let listenAmount=results[i].attributes["listenAmount"];
-                    if(listenAmount>=10000){
-                        listenAmount=(listenAmount/10000).toFixed(1)+'万';
-                    }
-                    let song_template = `
-                        <li>
-                            <span class="listen-acount">${listenAmount}</span>
-                            <img src="${results[i].attributes["thumbnails"]}" data-src="${results[i].attributes["image"]}" alt="推荐歌单">
-                            <p class="txt-ellipsis">
-                                ${results[i].attributes["title"]}
-                            </p>
-                        </li>
-                    `;
-                    mHtml += song_template;
-                }
-                return mHtml;
-            }
-        }
-    }
+//    function songCollection_template(results){
+//        if(results instanceof Array){   //传入的是数组
+//            if (results.length) {
+//                let mHtml = '';
+//                for (let i = 0; i < results.length; i++) {
+//                    let currentSong = results[i].attributes;
+//                    let listenAmount=results[i].attributes["listenAmount"];
+//                    if(listenAmount>=10000){
+//                        listenAmount=(listenAmount/10000).toFixed(1)+'万';
+//                    }
+//                    let song_template = `
+//                        <li>
+//                            <span class="listen-acount">${listenAmount}</span>
+//                            <img src="${results[i].attributes["thumbnails"]}" data-src="${results[i].attributes["image"]}" alt="推荐歌单">
+//                            <p class="txt-ellipsis">
+//                                ${results[i].attributes["title"]}
+//                            </p>
+//                        </li>
+//                    `;
+//                    mHtml += song_template;
+//                }
+//                return mHtml;
+//            }
+//        }
+//    }
 
     //歌曲列表模板，包含歌曲名称、歌手、专辑和播放按钮,传入单个对象或对象数组，返回组装好的HTML字符串
     function songListItem_template(results){
